# transunion_parser_example

./: .gitignore  README.md  ffrparse.ipynb  parser examples.ipynb  transunion.cabal
executable/: Main.hs
lib/: Csv.hs  Parser.hs  Random.hs  Signal.hs  Util.hs  transunion.hs
test/: TransunionSpec.hs
