name: transunion
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: TODO
description:
    TODO
category: TODO
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/katlean/experimental

library
  hs-source-dirs: lib
  exposed-modules:
      Parser
    , Random
    , Signal
    , Util
    , Csv
  build-depends:
      base ==4.*
    , parsec
    , cassava
    , template-haskell
    , mtl
    , vector
    , bytestring
    , containers
    , safe
    , text
    , QuickCheck -any
  default-language: Haskell2010

executable transunion
  hs-source-dirs: executable
  main-is: Main.hs
  build-depends:
      base -any
    , transunion -any
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , transunion -any
    , containers
    , hspec ==2.*
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      TransunionSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
